--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "rss-parser": "^3.7.5",
     "styled-components": "^5.0.1"
   },
   "scripts": {
